# snake-ai

./: .gitignore  README.md
src/: Brain.cpp  Brain.hpp  CMakeLists.txt  Display.cpp  Display.hpp  Snake.cpp  Snake.hpp  global.cpp  global.hpp  main.cpp
